# Automotive

./: CMakeLists.txt  ReadMe.md  run
include/: BatteryManager.h
src/: BatteryManager.c  main.c
test/: CMakeLists.txt  run  testRunner.cpp
